# fvsand

./: .gitignore  CMakeLists.txt  README.md
case/: coarse.tri  input.fvsand.cart  input.fvsand.coarse  input.fvsand.coarse~  input.fvsand.fine  input.fvsand.fine.cpu  input.fvsand.medium  medium.tri  run.py
case_cart/: input.fvsand.coarse
host-configs/hpcmp/scout/: gcc-8.3.1-cuda-11-openmpi.cmake  gcc-8.3.1-cuda-11-spectrum-mpi.cmake
host-configs/ornl/ascent/: gcc-10.2.0-cuda-11-spectrum-mpi.cmake
interface/: pyfv.cpp  pyfv.h  wrap.cpp
mms/: cart.template  input.fvsand.coarse  mms_test.py
src/: 1ToDo.txt  CMakeLists.txt  CartesianMesh.C  CartesianMesh.cpp  GlobalMesh.cpp  GlobalMesh.h  LocalMesh.C  LocalMesh.h  Makefile.example  NVTXMacros.h  Range.C  Range.h  StrandMesh.C  StrandMesh.cpp  boundaryface_interface.f90  clust.f  createCommPatterns.C  createCommPatterns.C.bak  deleteme  device_functions.h  divide1D.f90  faceOrder.h  findboundaryface.f90  findfact.f90  fvsand.C  fvsand.cpp  fvsand_cuda.h  fvsand_gpu.h  fvsand_hip.h  fvsand_nogpu.h  inputParser.h  mathops.c  mathops.h  metric_functions.h  mms.C  mms_wrap.f90  navier_stokes_mms.f90  parallelComm.h  parallelComm.h.debug  rcm.cpp  (+10 more)
